<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_timing"
            android:textSize="18sp"
            android:textColor="@color/blueDark"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_24" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:weightSum="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blueDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:padding="2dp"
                android:background="@color/grey">

                <TextView
                    android:id="@+id/txtTimeFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textSize="16sp"
                    android:textColor="@color/blueDark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/time_empty"
                    app:drawableEndCompat="@drawable/ic_arrow_down_24"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginStart="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blueDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@color/grey">

                <TextView
                    android:id="@+id/txtTimeTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:textSize="16sp"
                    android:textColor="@color/blueDark"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/time_empty"
                    app:drawableEndCompat="@drawable/ic_arrow_down_24"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/btnblue"
        android:padding="16dp"
        android:text="@string/save"
        android:textColor="@color/white"/>

</LinearLayout>